# colorful_logger

./: README.md  logger.py  pyproject.toml  setup.py
logger/: __init__.py
src/colorful_logger/: __init__.py
