[build-system]
requires = ["setuptools", "colorama", "datetime"]
build-backend = "setuptools.build_meta"

[project]
name = "colorful_logger"
version = "0.0.1"
authors = [
  { name="NetGoatFr", email="netgoatfr@gmail.com" },
]
description = "a colorful and useful logging module utility"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    
]

[project.urls]
Homepage = "https://github.com/netgoatfr/logger"
Issues = "https://github.com/netgoatfr/logger/issues"
